# lavalink-ops

./: .env.example  .gitignore  CLAUDE_CODE_PROMPT.md  DESIGN.md  LICENSE  README.md  docker-compose.yml  setup.sh
admin/: Dockerfile  pyproject.toml
admin/app/: config.py  dependencies.py  main.py
admin/app/routers/: config.py  dashboard.py  health.py  logs.py  test.py  tokens.py
admin/app/services/: cipher.py  docker_ctl.py  lavalink.py  log_watcher.py  pot.py  yaml_manager.py
admin/app/templates/: base.html  config.html  dashboard.html  health.html  login.html  logs.html  test.html  tokens.html
admin/app/templates/partials/: dashboard_stats.html  health_cards.html  log_lines.html  save_error.html  save_success.html  test_result.html  tokens_content.html
admin/tests/: test_lavalink.py  test_pot.py  test_yaml_manager.py
config/: application.yml
terraform/: .gitignore  .terraform.lock.hcl  main.tf  terraform.tfvars.example
